Fixed: insta width format working on safari ios but not on android.

--- a/src/sass/sm-wrappers.scss
+++ b/src/sass/sm-wrappers.scss
@@ -2,6 +2,11 @@
 .insta-container {
   min-width: 25vw;
 }
+@media screen and (max-width: 800px) {
+  .insta-container {
+    min-width: 0;
+  }
+}
 
 .fb-container {
   min-width: 25vw;
